scripts/nullness/annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8.txt
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterB.java:5: error: [method.invocation] call to setSymbol(char) not allowed on the given receiver.
		setSymbol('B');
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterB.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterB.java:6: error: [method.invocation] call to setWidth(int) not allowed on the given receiver.
		setWidth(20);
		        ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterB.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterB.java:7: error: [method.invocation] call to setHeight(int) not allowed on the given receiver.
		setHeight(30);
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterB.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterC.java:5: error: [method.invocation] call to setSymbol(char) not allowed on the given receiver.
		setSymbol('C');
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterC.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterC.java:6: error: [method.invocation] call to setWidth(int) not allowed on the given receiver.
		setWidth(40);
		        ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterC.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterC.java:7: error: [method.invocation] call to setHeight(int) not allowed on the given receiver.
		setHeight(50);
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterC.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterA.java:5: error: [method.invocation] call to setSymbol(char) not allowed on the given receiver.
		setSymbol('A');
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterA.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterA.java:6: error: [method.invocation] call to setWidth(int) not allowed on the given receiver.
		setWidth(10);
		        ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterA.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterA.java:7: error: [method.invocation] call to setHeight(int) not allowed on the given receiver.
		setHeight(20);
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterA.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightClient.java:15: error: [dereference.of.nullable] dereference of possibly-null reference character
			character.printCharacter();
			^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java:28: error: [argument] incompatible argument for parameter value of HashMap.put.
			characters.put(characterCode, character);
			                              ^
  found   : @Initialized @Nullable EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/abstractFactory/AbstractFactoryClient.java:11: error: [dereference.of.nullable] dereference of possibly-null reference af
		AbstractProductA product = af.createProductA();
		                           ^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:5: error: [initialization.field.uninitialized] the default constructor does not initialize field pie
	private Pie pie;
	            ^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:19: error: [dereference.of.nullable] dereference of possibly-null reference pie.getDough()
		if(pie.getDough().isEmpty()) {
		               ^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:23: error: [dereference.of.nullable] dereference of possibly-null reference pie.getFilling()
		if (pie.getFilling().isEmpty()) {
		                  ^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:5: error: [initialization.field.uninitialized] the default constructor does not initialize field pb
	private PieBuilder pb;
	                   ^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:35: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Pie
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/observer/CurrentConditionsDisplay.java:10: error: [argument] incompatible argument for parameter o of WeatherData.registerObserver.
        this.weatherData.registerObserver(this);
                                          ^
  found   : @UnderInitialization(patterns.gof.behavioral.observer.CurrentConditionsDisplay.class) @NonNull CurrentConditionsDisplay
  required: @Initialized @NonNull Observer
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/command/CommandCenter.java:11: error: [dereference.of.nullable] dereference of possibly-null reference command
		command.execute();
		^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Originator.java:20: error: [dereference.of.nullable] dereference of possibly-null reference memento
        this.state = memento.getState();
                     ^
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/state/StateContext.java:7: error: [method.invocation] call to setState(patterns.gof.behavioral.state.Statelike) not allowed on the given receiver.
        setState(new StateOne());
                ^
  found   : @UnderInitialization(patterns.gof.behavioral.state.StateContext.class) @NonNull StateContext
  required: @Initialized @NonNull StateContext
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/state/StateContext.java:15: error: [dereference.of.nullable] dereference of possibly-null reference myState
        myState.writeName(this, name);
        ^
Note: ../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
22 errors
